--- a/duanwu/package.json
+++ b/duanwu/package.json
@@ -12,8 +12,9 @@
 		"axios": "^0.19.2",
 		"clone-deep": "^4.0.1",
 		"core-js": "^3.6.5",
+		"countup.js": "^2.0.5",
 		"js-cookie": "^2.2.1",
-		"lodash": ">=4.17.19",
+		"lodash": "^4.17.19",
 		"lowdb": "^1.0.0",
 		"screenfull": "^5.0.2",
 		"view-design": "^4.3.1",
