--- a/duanwu/package.json
+++ b/duanwu/package.json
@@ -13,6 +13,7 @@
 		"clone-deep": "^4.0.1",
 		"core-js": "^3.6.5",
 		"countup.js": "^2.0.5",
+		"deepmerge": "^4.2.2",
 		"js-cookie": "^2.2.1",
 		"lodash": "^4.17.19",
 		"lowdb": "^1.0.0",
