--- a/duanwu/package.json
+++ b/duanwu/package.json
@@ -17,6 +17,7 @@
 		"js-cookie": "^2.2.1",
 		"lodash": "^4.17.19",
 		"lowdb": "^1.0.0",
+		"qs": "^6.9.4",
 		"screenfull": "^5.0.2",
 		"view-design": "^4.3.1",
 		"vue": "^2.6.11",
@@ -39,6 +40,7 @@
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-standard": "^4.0.0",
 		"eslint-plugin-vue": "^6.2.2",
+		"mockjs": "^1.1.0",
 		"sass": "^1.26.5",
 		"sass-loader": "^8.0.2",
 		"vue-template-compiler": "^2.6.11"
