--- a/duanwu/package.json
+++ b/duanwu/package.json
@@ -13,7 +13,9 @@
 		"clone-deep": "^4.0.1",
 		"core-js": "^3.6.5",
 		"countup.js": "^2.0.5",
+		"dayjs": "^1.8.32",
 		"deepmerge": "^4.2.2",
+		"element-resize-detector": "^1.2.1",
 		"js-cookie": "^2.2.1",
 		"lodash": "^4.17.19",
 		"lowdb": "^1.0.0",
