个人设置、工作台

--- a/duanwu/package.json
+++ b/duanwu/package.json
@@ -15,10 +15,12 @@
 		"countup.js": "^2.0.5",
 		"dayjs": "^1.8.32",
 		"deepmerge": "^4.2.2",
+		"echarts": "^4.8.0",
 		"element-resize-detector": "^1.2.1",
 		"js-cookie": "^2.2.1",
 		"lodash": "^4.17.19",
 		"lowdb": "^1.0.0",
+		"numeral": "^2.0.6",
 		"qs": "^6.9.4",
 		"screenfull": "^5.0.2",
 		"view-design": "^4.3.1",
