--- a/duanwu/package.json
+++ b/duanwu/package.json
@@ -22,7 +22,9 @@
 		"lowdb": "^1.0.0",
 		"numeral": "^2.0.6",
 		"qs": "^6.9.4",
+		"quill": "^1.3.7",
 		"screenfull": "^5.0.2",
+		"simplemde": "^1.11.2",
 		"view-design": "^4.3.2",
 		"vue": "^2.6.12",
 		"vue-i18n": "^8.21.0",
